--- a/web/index.html
+++ b/web/index.html
@@ -8,7 +8,7 @@
     <!-- Load d3.js and c3.js -->
     <script src="d3/d3.min.js" charset="utf-8"></script>
     <script src="c3/c3.min.js"></script>
-
+    <script src="scripts/get_csvs.php"></script>
     <script src="scripts/file_access.js"></script>
   <body>
     <div id="header-background">
@@ -17,7 +17,7 @@
       </div>
     </div>
     <div id="subheader-background">
-
+      <div id="subheader-menu"></div>
     </div>
     <div class="graph-card center">
       <div id="graph1"></div>
